css/site.css
/* Page Specific CSS */

body {font-family: Lato; background: #EAE4CF; color: #333; font-size: 16px; margin: 0px;}
h1 {font-size: 80px; font-family: Amatic SC; font-weight: normal; margin: 0px;}
h2 {font-size: 50px; font-family: Amatic SC; font-weight: normal; margin: 11px 0px;}
h3 {font-family: Amatic SC; font-size: 30px; margin: 10px 0px;}
h4 {font-family: Lato; font-size: 24px;}

.header {background-image: url(../img/header.jpg);}
.header img {float: left; padding-left: 20px; padding-right: 20px;}
.header h1 {position: relative; padding-left: 10%;}

.footer {margin-top: 20px; background-image: url(../img/footer.png); height: 475px; display: flex; flex-direction: row; flex-wrap: nowrap; justify-content: space-between; color: #3E3E0A;}
.footer ul {padding-left: 20px;}
.footer li {text-align: left; font-size: 18px;}
/* change width of below element to increase margins */
.any-class li {width: 120px; height: 80px;}
.footer a {border-bottom: none; cursor: pointer; color: #3E3E0A;}
#partners, #contribute, #connect {width: 100%; margin-top: 210px; margin-left: 20px; margin-right: 20px; text-align: center;}
#contribute {width: 150%;}
.vDivider {border-left: 2px solid #3E3E0A; height: 200px; margin-top: 235px;}
.hDivider {border-top: 1px solid rgba(0, 0, 0, 0.1); width: 190px;}

img {width: 100%;}
p a, a {color: #333; text-decoration: none; padding-bottom: 0px; border-bottom: 1px #FD9393 solid;}
a:hover {color: #47CCFC;}
small {padding: 10px 0px; font-size: 10px;}
p {margin: 0px; padding: 0px; font-size: 12px;}
li {line-height: 19px; font-size: 12px;}
ol {line-height: 24px;}
a.button {border: none;}

pre {word-wrap: break-word; padding: 14px; background: #F0F0F0; }
code {font-family: "Consolas", "Ubuntu Mono", monospace; line-height: 22px; font-size: 13px; color: #636363; font-weight: normal;}

.red-text {color: #FD9393;}

#map-wrapper {float: left; clear: left; height: 500px; min-width: 60%; background: #DADADA; margin-left: 20px;}
#map {position: absolute; z-index: 9; height: 500px; min-width: 100%; background: #DADADA;}
#map a {border: none;}

.container {margin: 0px auto;}
#tableFilter {margin: 12px 0px; border: none; border-bottom: 1px solid #333; background-color: transparent; padding: 0px; font-family: Lato; color: #333; font-size: 13px; height: 22px; margin-left: 20px;}

::selection {background: #E5FF1D;}
::-moz-selection {background: #E5FF1D;}

ul.nav {list-style: none; margin: 0px; padding-left: 10%; padding-bottom: 10px; position: relative; margin-left: 20px;}
ul.nav li {display: inline; font-size: 10px; letter-spacing: .1em; text-transform: uppercase; padding-right: 4px;}
ul.nav li a {border: none;}
ul.nav li a:hover {border-bottom: 1px #FD9393 solid;}

ul.nav2 {list-style-type: none; padding: 0px; margin: 0px auto;}
ul.nav2 li {float: left; margin: auto; width: 50%; cursor: pointer;}
ul.nav2 li a {background-color: #008574; font-size: 18px; font-weight: bolder; border-bottom: 0px; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; cursor: pointer;}
ul.nav2 li a:hover:not(.active) {background-color: #016054;}
ul.nav2 li a.active {background-color: #016054;}

#wrapper {/*margin: 0px auto;*/ /*margin-left: 250px;*/}
div#middle {margin-top: 70px; -webkit-transform: translate3d(0,0,0);}
#wrapper2 {margin: 20px 20px 0px 20px;}

.button {padding: 5px 5px; background-color: #BEBEBE; font-size: 10px; color: #fff;}
.button:hover {background: #B9FCFC; color: #47CCFC;}
.fauxButton {padding: 5px 5px; background-color: #FF4646; font-size: 11px; color: #fff; display: inline;}
.fauxButton .selected {background-color: #FF4646;}
.colorText {color: #FF4646; text-transform: uppercase; font-weight: 700;}
.filterText {font-size: 14px; font-weight: 300; display: inline;}
.descText {font-size: 14px; font-weight: 300;}

.leaflet-popup-content h2 {font-family: Lato; font-size: 14px; text-transform: uppercase;}

#rightSide {clear: right; max-width: 35%; width: 100%; float: left; padding-top: 5px; padding-left: 20px;}
#selectedSpot {display: none;}
#latestSpot ul, #selectedSpot ul {list-style: none; margin-top: 12px 0px; padding: 0px;}
.category {text-transform: uppercase; font-size: 9px; letter-spacing: .2em; padding-right: 6px;}

#info p {font-size: 14px; padding: 4px; line-height: 19px; font-weight: 300;}
#info {margin-left: 20px; margin-right: 20px;}

#hackSpotsTable, #hackSpotsTable2 {cursor: pointer; background: #fcfcfc; overflow-x: auto; margin-left: 20px; margin-right: 20px;}
#hackSpotsTable table, #hackSpotsTable2 table {min-width: 900px;}
#hackSpotsTable .tHeader:hover, #hackSpotsTable2 .tHeader:hover {color: #FF4646;}
.tHeader::after {content: " \2193 \2191 "; font-size: 10px; padding-left: 3px;}
.spotRow:hover {color: #FF4646;}
.spotRow {border-left: 3px solid #ff00ff;}
.hideRow {display: none;}
.selectedRow {color: #FF4C0D;}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
  .header h1 {padding-left: 40px;}
  ul.nav {padding-left: 40px; margin-left: 0px;}
  #map-wrapper {width: 50%; min-width: 50px;}
  #rightSide {max-width: 40%;}
  #youtube {display: none;}
}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation: portrait) {
  .footer {display: none;}
}

@media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
  .header {background-image: none;}
  .header h1 {padding-left: 20px;}
  ul.nav {padding-left: 20px; margin-left: 0px;}
  #map-wrapper {width: 90%; max-width: 100%;}
  #rightSide {max-width: 90%;}
  #resetMap, #clear, #wrapper3, .footer, .filterText {display: none;}
  #wrapper2 {margin: 0px;}
}

/* Partner Slider */
#slider {margin: 0px auto; width: 275px;}
.prev, .next {
    display: block;
    line-height: 1;
    color: #3E3E0A;
    text-decoration: none;
    font-family: Arial, sans-serif;
    font-size: 25px;
    background: none;
    border: none;
}
.any-class {display:inline-block;}
button:focus {outline:0;}

/* Social Media Sharing */
#share {align-items: center; justify-content: space-between; margin-top: 70px; margin-bottom: 20px; display: flex; background-color: #F3F3F3; width: 100%;}
#share h4 {color: rgba(0, 0, 0, 0.5); font-size: 16px; font-weight: bold;}
#share-left {line-height: 1.5em; font-weight: 300; background-color: white; box-shadow: 0 0 2px rgba(0,0,0,.35); margin: 20px; width: 75%;}
#share-left p {margin: 5px; font-size: 14px;}
#share-left a {cursor: pointer;}
#share-right {margin-right: 20px; text-align: center;}
#share-right a {color: inherit; border-bottom: 0px;}
#share-right a:hover {color: #47CCFC;}

#textarea {height: 150px; overflow: auto; padding: 2px;}

